bug: welcome zindex too low

--- a/frontend/src/styles/Welcome.css
+++ b/frontend/src/styles/Welcome.css
@@ -14,6 +14,7 @@
     border: 2px solid var(--error);
     display: flex;
     height: fit-content;
+    z-index: 300;
 }
 #welcome .close {
     opacity: 1;
